[gd_scene load_steps=2 format=3 uid="uid://b05pofqgwilo"]

[ext_resource type="Script" uid="uid://cxr4fwlj2p3xk" path="res://src/ui/victory_screen.gd" id="1_victory"]

[node name="VictoryScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_victory")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.2, 0.4, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = " VICTORY! "
horizontal_alignment = 1

[node name="CongratulationsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Congratulations, Champion!
You have conquered all challenges
and emerged victorious!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üîÑ Play Again"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üè† Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
